--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDjaLTO-ZVPyPQkn5n_9aZLfPq0oc82V_M&callback=angular.noop">
+  </script>
   <meta charset="utf-8" />
   <title>Ionic App</title>
 
